# MGARDx

./: CMakeLists.txt  README.md
include/: adaptive.hpp  correction.hpp  data_enc.hpp  data_enc_opt.hpp  data_org.hpp  decompose.hpp  error_est.hpp  io_utils.hpp  misc.hpp  recompose.hpp  refactor.hpp  reorder.hpp  utils.hpp
parallel_src/: CMakeLists.txt  parallel_mgard.cpp  parallel_sz.cpp  parallel_zfp.cpp
result/: Hurricane_mgard_level2_ratio.txt  Hurricane_mgard_level3_nrmse.txt  Hurricane_mgard_level3_psnr.txt  Hurricane_mgard_level3_ratio.txt  Hurricane_pure_mgard_level1_nrmse.txt  Hurricane_pure_mgard_level1_psnr.txt  Hurricane_pure_mgard_level2_ratio.txt  Hurricane_pure_mgard_level4_psnr.txt  Hurricane_pure_mgard_level5_psnr.txt  Hurricane_pure_mgard_level6_nrmse.txt  Hurricane_sz_ratio.txt  Hurricane_zfp_nrmse.txt  NYX_mgard_level1_nrmse.txt  NYX_mgard_level1_psnr.txt  NYX_mgard_level1_ratio.txt  NYX_mgard_level2_psnr.txt  NYX_mgard_level3_nrmse.txt  NYX_pure_mgard_level1_nrmse.txt  NYX_pure_mgard_level2_nrmse.txt  NYX_pure_mgard_level2_psnr.txt  NYX_pure_mgard_level3_ratio.txt  NYX_pure_mgard_level4_nrmse.txt  NYX_pure_mgard_level4_ratio.txt  NYX_pure_mgard_level5_psnr.txt  NYX_pure_mgard_level5_ratio.txt  NYX_pure_mgard_level6_ratio.txt  NYX_pure_mgard_level7_nrmse.txt  NYX_pure_mgard_level7_psnr.txt  NYX_pure_mgard_level8_nrmse.txt  NYX_pure_mgard_level8_ratio.txt  NYX_pure_mgard_level9_nrmse.txt  NYX_sz_ratio.txt  NYX_zfp_ratio.txt  QMCPACK_mgard_level1_nrmse.txt  QMCPACK_mgard_level1_psnr.txt  QMCPACK_mgard_level1_ratio.txt  QMCPACK_mgard_level2_nrmse.txt  QMCPACK_mgard_level2_psnr.txt  QMCPACK_mgard_level3_ratio.txt  QMCPACK_pure_mgard_level1_nrmse.txt  (+27 more)
result/optimizations/: grep_time.sh  hurricane_decomposition_time.txt  hurricane_opt_0.txt  hurricane_opt_1.txt  hurricane_opt_2.txt  nyx_opt_1.txt  qmc_decomposition_time.txt  qmc_opt_1.txt  scale_decomposition_time.txt  scale_opt_2.txt
script/: bin_to_netcdf_scalar_3d.py  plot_analysis.py  plot_comp_rate.py  plot_decomp_rate.py  plot_err_dist.py  plot_load_vector.py  plot_load_vector_md.py  plot_optimization.py  plot_rate_distortion.py  plot_rate_distortion_hybrid_levels.py  plot_rate_distortion_optimization.py  test_convergence.py  utils.py
script/log/: compute_perf.py  compute_perf_all.py  compute_perf_others.sh  compute_perf_others_all_data.sh  compute_perf_sz.sh  hybrid_comp_perf.txt  hybrid_decomp_perf.txt  mgard_comp_perf.txt  mgard_decomp_perf.txt  run_hybrid.py  run_mgard.py  run_single_eb.py  run_sz.py  run_zfp.py
script/result/: Hurricane_mgard_level1_nrmse.txt  Hurricane_mgard_level1_psnr.txt  Hurricane_mgard_level1_ratio.txt  Hurricane_mgard_level2_nrmse.txt  Hurricane_mgard_level2_psnr.txt  Hurricane_old_mgard_nrmse.txt  Hurricane_old_mgard_nrmse.txt.cont  Hurricane_old_mgard_psnr.txt  Hurricane_old_mgard_psnr.txt.cont  Hurricane_old_mgard_ratio.txt  Hurricane_old_mgard_ratio.txt.cont  Hurricane_pure_mgard_level1_ratio.txt  Hurricane_pure_mgard_level2_nrmse.txt  Hurricane_pure_mgard_level2_psnr.txt  Hurricane_pure_mgard_level3_nrmse.txt  Hurricane_pure_mgard_level3_psnr.txt  Hurricane_pure_mgard_level3_ratio.txt  Hurricane_pure_mgard_level4_nrmse.txt  Hurricane_pure_mgard_level4_ratio.txt  Hurricane_pure_mgard_level5_nrmse.txt  Hurricane_pure_mgard_level5_ratio.txt  Hurricane_pure_mgard_level6_psnr.txt  Hurricane_pure_mgard_level6_ratio.txt  Hurricane_sz_nrmse.txt  Hurricane_sz_psnr.txt  Hurricane_zfp_psnr.txt  Hurricane_zfp_ratio.txt  NYX_mgard_level2_nrmse.txt  NYX_mgard_level2_ratio.txt  NYX_mgard_level3_psnr.txt  NYX_mgard_level3_ratio.txt  NYX_old_mgard_nrmse.txt  NYX_old_mgard_nrmse.txt.cont  NYX_old_mgard_psnr.txt  NYX_old_mgard_psnr.txt.cont  NYX_old_mgard_ratio.txt  NYX_old_mgard_ratio.txt.cont  NYX_pure_mgard_level1_psnr.txt  NYX_pure_mgard_level1_ratio.txt  NYX_pure_mgard_level2_ratio.txt  (+55 more)
script/result/optimizations/: grep_time.sh  hurricane_decomposition_DR_time.txt  hurricane_decomposition_time.txt  hurricane_mgard.txt  hurricane_recomposition_DR_time.txt  hurricane_recomposition_time.txt  nyx_decomposition_DR_time.txt  nyx_decomposition_time.txt  nyx_mgard.txt  nyx_opt_0.txt  nyx_opt_2.txt  nyx_recomposition_DR_time.txt  nyx_recomposition_time.txt  qmc_decomposition_time.txt  qmc_mgard.txt  qmc_opt_0.txt  qmc_opt_2.txt  qmc_recomposition_time.txt  qmcpack_decomposition_DR_time.txt  qmcpack_recomposition_DR_time.txt  scale_decomposition_DR_time.txt  scale_decomposition_time.txt  scale_mgard.txt  scale_opt_0.txt  scale_opt_1.txt  scale_recomposition_DR_time.txt  scale_recomposition_time.txt
script/result/parallel/: compression_scalability.txt  decompression_scalability.txt  level_scalability_temperature.txt  level_scalability_vx.txt  resource_scalability_temperature.txt  resource_scalability_vx.txt
script/result/rate/: hurricane_comp_time.txt  hurricane_decomp_time.txt  nyx_comp_time.txt  nyx_decomp_time.txt  qmc_comp_time.txt  qmc_decomp_time.txt  scale_comp_time.txt  scale_decomp_time.txt
test/: CMakeLists.txt  test_bitplane_performance.cpp  test_compress.cpp  test_convergence.cpp  test_data_reorder.cpp  test_decompose.cpp  test_decompose_example.cpp  test_decompress.cpp  test_intra_level_progressive_encoding.cpp  test_operator_norm.cpp  test_real_data.cpp  test_refactor.cpp  test_retrieval.cpp  test_thomas_algorithm.cpp
