cmake_minimum_required (VERSION 3.0)
project(xMGARD)
project(First VERSION 1.0.0.0)
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "-g -O3")

find_library(ZSTD_LIB zstd HINTS "/Users/x0o/github/SZ/build/zstd")
find_library(SZ3_LIB SZ3 HINTS "/Users/x0o/github/sz_refactory/build/src")
find_library(SZ_CPP_LIB sz_cpp HINTS "/Users/x0o/github/meta_compressor/build/lib")
set (ZSTD_INC "/Users/x0o/github/SZ/zstd")
set (SZ3_INC "/Users/x0o/github/sz_refactory/include")
set (SZ_CPP_INC "/Users/x0o/github/meta_compressor/build/include")

add_subdirectory (test)
# add_subdirectory (parallel_src)
